# Seminars-EVM

./: .gitignore  README.md
1 & 2 semesters (docker 12 july 2022)/.vim/: .netrwhist
1-2-semesters-(docker-12-july-2022)/: .bash_history  .viminfo
1-semester/02-conditionals-and-cycles/: inverse_square_series.c
1-semester/03-file/: input.txt  output.txt
1-semester/05-dynamic-array/: input.txt  input13.txt
1-semester/06-sorting-algorithms/: quicksort_vs_insertion_sort.c  test.c
1-semester/07-bitwise-operations/: bit.c  bitwise_test.c  change_byte.c  output.txt
1-semester/08-fibonacci-cycle-vs-recursion/: fib.c
1-semester/1-hello-world-and-calculator/: calculate_BMI_brief.c
1-semester/5-dynamic-array/: 13-half-sum-of-neighbors.c  test_array.c  test_functions.c
1-semester/6-sorting-algorithms/: input.txt  outputfast.txt
2-semester/01-makefile/: functions.h  test_struct.c
2-semester/03-simpsons-rule/: integrate_with_simpsons_rule.c
2-semester/04-point-of-minimum/: find_point_of_minimum_of_function.c
2-semester/06-matrices-part-1/: gaussian_elimination.c  input.txt
2-semester/09-strings-part-2/: find_max_min_avg_string_length.c  input2.txt
2-semester/1-makefile/: Makefile
2-semester/10-integral-equation/: integeq-v-2.c
2-semester/5-piecewise-linear-interpolation/: Makefile  input.txt  main.c
2-semester/6-matrices-part-1/: gaussian_elimination.c  input.txt  new_gaussian_elimination.c
2-semester/7-matrices-part-2/: image_of_max_elements_column.c  input.txt
2-semester/9-strings-part-2/: find_max_min_avg_string_length-v-2.c
3 semester/day1 base/: base complex.cpp  basic_calculator differences.cpp  basic_calculator presentation form.cpp  basic_calculator.cpp  differences_test.cpp
3 semester/day2 vector/: findpivotvector.cpp
3 semester/day4 class/: Set_from_scratch_6_mars_2023.cpp  class_with_vector.cpp  fast_test.cpp  final_class_Set.cpp  not_working_class_Set.cpp  simple_code_tester.cpp
3 semester/day6 linked lists/: linked list.cpp
caos/: sum.S
caos/command-line/: README.md  (+4 more)
tba/: fast.cpp
tba/1-theater_cpp/: CMakeLists.txt
tba/1-theater_cpp/data/: lmsu.json  rating50.json
tba/1-theater_cpp/include/: io_helpers.hpp  theater_algorithms_edit.hpp  theater_algorithms_print.hpp  theater_algorithms_sort.hpp
tba/1-theater_cpp/src/main/: main.cpp
(+242 files in other folders)
